membuat tampilan aktivitas

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <li class="menu-item">
               <a href="kegiatan.html" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-layout"></i>
-                <div class="text-truncate">Kegiatan</div>
+                <div class="text-truncate">Target Pekerjaan</div>
               </a>
             </li>
 
@@ -136,17 +136,6 @@
                 </div>
               </div>
               <ul class="navbar-nav flex-row align-items-center ms-auto">
-                <li class="nav-item lh-1 me-4">
-                  <a
-                    class="github-button"
-                    href="https://github.com/themeselection/sneat-html-admin-template-free"
-                    data-icon="octicon-star"
-                    data-size="large"
-                    data-show-count="true"
-                    aria-label="Star themeselection/sneat-html-admin-template-free on GitHub"
-                    >Star</a
-                  >
-                </li>
                 <li class="nav-item navbar-dropdown dropdown-user dropdown">
                   <a
                     class="nav-link dropdown-toggle hide-arrow p-0"
@@ -175,7 +164,7 @@
                             </div>
                           </div>
                           <div class="flex-grow-1">
-                            <h6 class="mb-0">John Doe</h6>
+                            <h6 class="mb-0">Ananda Oktavia</h6>
                             <small class="text-muted">Admin</small>
                           </div>
                         </div>
@@ -216,9 +205,9 @@
                     <div class="d-flex align-items-start row">
                       <div class="col-sm-7">
                         <div class="card-body">
-                          <h5 class="card-title text-primary mb-3">Congratulations John! 🎉</h5>
+                          <h5 class="card-title text-primary mb-3">Selamat Datang di Dashboard KANTORKU 🎉</h5>
                           <p class="mb-6">
-                            You have done 72% more sales today.<br />Check your new badge in your profile.
+                            Semangat Bekerja.<br />Check your new .
                           </p>
                         </div>
                       </div>
