membuat halaman target kegiatan

--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
             </a>            
             <a
               href="javascript:void(0);"
-              class="layout-menu-toggle menu-link text-large ms-auto d-block d-xl-none"
-            >
+              class="layout-menu-toggle menu-link text-large ms-auto d-block d-xl-none">
               <i class="bx bx-chevron-left bx-sm d-flex align-items-center justify-content-center"></i>
             </a>
           </div>
@@ -71,9 +70,9 @@
             </li>
             <!-- Kegiatan -->
             <li class="menu-item">
-              <a href="kegiatan.html" class="menu-link">
+              <a href="target-kegiatan.html" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-layout"></i>
-                <div class="text-truncate">Target Pekerjaan</div>
+                <div class="text-truncate">Target Kegiatan</div>
               </a>
             </li>
 
